# stk

./: .flake8  .gitignore  .isort.cfg  .lgtm.yml  .readthedocs.yml  .travis.yml  1_rotaxane.mol  LICENSE.txt  Makefile  README.rst  __init__.py  __main__.py  classes.py  convenience_functions.py  convenience_tools.py  export_tools.py  fitness.py  justfile  license  mamea_input.in  mmea_input.in  mypy.ini  notes.txt  optimization.py  plotting.py  population.py  pyproject.toml  pytest.ini  readme.rst  requirements.readthedocs.txt  requirements.txt  rotaxane.mol  setup.py  test.py  test_cage.py  todo.txt
.github/: pull_request_template.md
.github/workflows/: build_and_publish_testing_image.yml  codeql.yml  format_code.yml  isort.yml  lint.yml  on-push.yml  publish_release.yml  remake_rst_files.yml  run-pytest.yml  tests.yml
addons/pyWINDOW/: .gitignore  LICENSE  README.md  __init__.py  requirements.txt
addons/pyWindow/: __init__.py  pyWindow.py
benchmarks/cof/: benchmark_kagome.py
classes/: __init__.py  energy.py  exception.py  fg_info.py  function_data.py  input_parser.py  mol_reader.py  molecular.py  plotter.py  population.py  topology.py
classes/ga/: __init__.py  containers.py  crossover.py  ga_input.py  ga_progress.py  ga_tools.py  input.py  mating.py  mutation.py  normalization.py  plotter.py  progress.py  selection.py
classes/topology/: __init__.py  base.py
convenience_functions/: __init__.py  convenience_functions.py  database.py  database_prune.py
convenience_tools/: __init__.py  convenience_tools.py
docker/: Dockerfile
docker_testing_environment/: Dockerfile
docs/: Makefile  conf.py  environment.yml  remake_modules.bash  requirements.txt
docs/source/: advanced_cage_building.rst  basic_ea_example.rst  basic_examples.rst  caching.rst  cage.rst  calculators.rst  cof.rst  compound_crossers.rst  compound_mutators.rst  conf.py  constructed_molecule_databases.rst  construction_overview.rst  cookbook.rst  crossover.rst  developer_guide.rst  ea.rst  fitness_calculators.rst  fitness_normalizers.rst  functional_group_factories.rst  functional_groups.rst  graph_components.rst  host_guest.rst  index.rst  intermediate_ea_example.rst  introduction.rst  key_makers.rst  metal_complex.rst  modifying_calculators.rst  modules.rst  molecule_databases.rst  mutation.rst  optimizers.rst  plotters.rst  polymer.rst  reaction_factories.rst  reactions.rst  selection.rst  small.rst  stk.base_calculators.rst  stk.caches.constructed_molecule.constructed_molecule.rst  (+706 more)
documentation/: Makefile  make.bat
documentation/developers_guide/: developers_guide.aux  developers_guide.html  developers_guide.tex  developers_guide.toc
documentation/notebook/: aldehyde.mol2
documentation/software_description/: software_description.tex
documentation/source/: conf.py  index.rst  mmead.ga.rst  mmead.molecular.optimization.rst  mmead.molecular.rst  mmead.molecular.topologies.cage.rst  mmead.rst  modules.rst  mtk.convenience_tools.mplogging.rst  mtk.ga.crossover.rst  mtk.ga.fitness.rst  mtk.ga.ga_exit.rst  mtk.ga.ga_population.rst  mtk.ga.ga_tools.rst  mtk.ga.mutation.rst  mtk.ga.plotting.rst  mtk.ga.population.rst  mtk.ga.rst  mtk.ga.selection.rst  mtk.molecular.optimization.macromodel.rst  mtk.molecular.optimization.optimization.rst  mtk.molecular.optimization.rst  mtk.molecular.rst  mtk.molecular.topologies.base.rst  mtk.molecular.topologies.cage.rst  mtk.molecular.topologies.cage.two_plus_three.rst  mtk.molecular.topologies.cof.rst  mtk.molecular.topologies.periodic.rst  mtk.molecular.topologies.rst  mtk.optimization.mopac.rst  mtk.rst  mtk.tests.test_cage_topologies.rst  mtk.tests.test_gainput.rst  mtk.tests.test_macromodel.rst  mtk.tests.test_mutation.rst  mtk.tests.test_normalization.rst  mtk.tests.test_population.rst  mtk.tests.test_struct_unit2.rst  stk.convenience_tools.rst  stk.molecular.fg_info.rst  (+11 more)
documentation/users_guide/: input_file_raw.html  input_file_raw.py  users_guide.aux  users_guide.html  users_guide.out  users_guide.tex  users_guide.toc
ga/: __init__.py  crossover.py  exit.py  fitness.py  ga_exit.py  ga_population.py  ga_tools.py  input.py  mutation.py  normalization.py  plotting.py  population.py  progress.py  selection.py
molecular/: __init__.py  energy.py  fg_info.py  molecules.py
molecular/optimization/: __init__.py  macromodel.py  mopac.py  optimization.py
molecular/topologies/: __init__.py  base.py  cof.py  periodic.py
molecular_tools/: molecules.py
notebook/: mmea_notebook.ipynb  molecule.mol
optimization/: __init__.py  macromodel.py  mopac.py  optimization.py
pyWindow/: pyWindow.py
src/stk/: cage.py  (+12 more)
stk/: __init__.py  __main__.py  ga.py  population.py  populations.py
tests/: _test_utilities.py  conftest.py  drop_test_database.py  environment.yml  mongo-config.json  test_GFN.py  test_bonds.py  test_building_block.py  test_cage.py  test_cage_topologies.py  test_cof_topologies.py  test_constructed_molecule.py  test_crossers.py  test_crossover.py  test_cyclic_topology.py  test_elements.py  test_energy.py  test_energy_calculators.py  test_exiters.py  test_fitness.py  test_fitness_calculators.py  test_fitness_normalizers.py  test_functional_groups.py  test_gainput.py  test_linear_topology.py  test_macrocycle.py  test_macromodel.py  test_macromolecule.py  test_mating.py  test_molecule.py  test_mopac.py  test_mutation.py  test_mutators.py  test_normalization.py  test_optimizers.py  test_orientation_vertex.py  test_placement_vertex.py  test_plotters.py  test_polymer.py  test_population.py  (+12 more)
(+2521 files in other folders)
