[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stk"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]
dependencies = [
  "atomlite",
  "scipy",
  "matplotlib",
  "pandas",
  "pathos",
  "seaborn",
  "numpy",
  "pymongo[srv]",
  "MCHammer",
  "SpinDry",
  "vabene",
  "rdkit",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "ruff",
  "moldoc",
  "mypy",
  "pip-tools",
  # TODO: Remove pin when https://github.com/TvoroG/pytest-lazy-fixture/issues/65 is resolved.
  # pytest-lazy-fixture 0.6.0 is incompatible with pytest 8.0.0
  "pytest<8",
  "pytest-benchmark",
  "pytest-datadir",
  "pytest-lazy-fixture",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
  "twine",
]

[project.urls]
github = "https://github.com/lukasturcani/stk"
documentation = "https://stk.readthedocs.io"

[tool.setuptools_scm]
write_to = "src/stk/_version.py"


[tool.ruff]
line-length = 79

[too.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "benchmark_*.py",
    "*_benchmark.py",
]
python_functions = [
  "test_*",
  "benchmark_*",
]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
  "scipy.*",
  "pytest_lazyfixture.*",
  "pathos.*",
  "matplotlib.*",
  "pandas.*",
  "seaborn.*",
  "mchammer.*",
  "spindry.*",
  "pymongo.*",
  "vabene.*",
  "setuptools.*"
]
ignore_missing_imports = true
